@@ -1,6 +1,11 @@
 2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/hc08/gen.c:
+	  Fix handling of isFree for register operands.
+
+2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/hc08/gen.c:
 	  More flexible use of A in cast.
 
 2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
